# gigabyte-rag-assistant

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
data/: eval_results.json  eval_results_3b.json  eval_results_7b.json  judge_results_3b_hybrid_binary.json  judge_results_3b_score.json  judge_results_3b_semantic_binary.json  judge_results_7b_score.json
data/index/: metadata.json  specs.faiss
data/raw/: aorus_master_16.html  raw_specs.json
src/: chunker.py  embedder.py  evaluate.py  evaluate_judge.py  generator.py  hybrid_retriever.py  llm_judge.py  parser.py  rag.py  retriever.py  scraper.py  server.py
