[project]
name = "gigabyte-rag-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "faiss-cpu>=1.13.2",
    "httpx>=0.28.1",
    "llama-cpp-python>=0.3.19",
    "numpy>=2.4.4",
    "playwright>=1.58.0",
    "requests>=2.33.1",
    "rich>=14.3.3",
    "sentence-transformers>=5.3.0",
]
